<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="testing_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="app_title">Real Estate Manager</string>
    <string name="available_since">Available since</string>
    <string name="solded_since">Solded since</string>
    <string name="square_meter">Square meter,"</string>
    <string name="pieces">Pieces"</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="area">Area</string>
    <string name="pieces_">Pieces</string>
    <string name="interest_points">Interest points: </string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photos">photos</string>
    <string name="completed">Completed</string>
    <string name="photo_description">Photo description</string>
    <string name="validate">Validate</string>
    <string name="edit_property">Edit property</string>
    <string name="agent">Agent</string>
    <string name="chooseyourprofilepicture">Choose your profile picture</string>
    <string name="choosefromgallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="takephoto">Take Photo</string>
    <string name="propertyadded">Property added</string>
    <string name="thenewpropertyhasbeenadded">The new property has been added</string>
    <string name="solded">Solded</string>
    <string name="status">status</string>
    <string name="sold">Sold</string>
    <string name="available">Available</string>
    <string name="sold_date">Sold date</string>
    <string name="availability_date">Availability date</string>
    <string name="availability">Availability</string>
    <string name="apply_filter">Apply filter</string>
    <string name="photoanddescriptionadded">Photo and description added</string>
    <string name="photodescription">Photo description:</string>
    <string name="details">Details:</string>
    <string name="types">Types</string>
    <string name="remove_filters">Remove filters</string>
    <string name="noproperties">No properties in database</string>
    <string name="result">Result</string>
    <string name="your_monthly_payments_will_be">Your monthly payments will be</string>
    <string name="result_of_the_simulation">Result of the simulation</string>
    <string name="currency">Currency</string>
    <string name="dollars">Dollars</string>
    <string name="euros">euros</string>
    <string name="nodatatodisplay">No data to display</string>
    <string name="nopermissionforlocation">No permission for location</string>
    <string name="realestatesimulator">Real estate simulator</string>
    <string name="realestatemanager">Real Estate Manager</string>
    <string name="errorsolddate">Error: sold date but status is not solded</string>
</resources>
